[package]
name = "wincs"
version = "0.1.0"
edition = "2021"

[dependencies]
widestring = "1.0.2"
nt-time = "0.8.0"
memoffset = "0.6.4"
windows = { version = "0.33.0", features = [
  "alloc",
  "Win32_Foundation",
  "Win32_Storage_CloudFilters",
  "Win32_System_SystemServices",
  "Win32_System_CorrelationVector",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Storage_Provider",
  "Win32_System_Memory",
  "Storage",
  "Foundation",
  "Foundation_Collections",
  "Win32_Security_Authorization",
  "Win32_UI_Shell",
  "Win32_System_Com",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_System_Com_StructuredStorage",
  "Win32_Storage_EnhancedStorage",
  "Win32_System_Ole",
  "Win32_System_Search",
  "Storage_Streams",
  "Win32_System_Ioctl",
  "Win32_Security",
] }
globset = { version = "0.4.9", optional = true }

[features]
# Enable globs in the `info::FetchPlaceholders` struct.
globs = ["globset"]

# TODO: temporarily ignored
[workspace]
members = ["examples/sftp"]
