[package]
name = "cloud-filter"
version = "0.0.3"
authors = [
  "ok-nick <nick.libraries@gmail.com>",
  "ho-229 <ho229v3666@gmail.com>",
]
edition = "2021"
description = "A safe and idiomatic wrapper around the Windows Cloud Filter API"
license = "MIT"
repository = "https://github.com/ho-229/cloud-filter-rs"
documentation = "https://docs.rs/cloud-filter"
exclude = ["examples/", ".github/", "test/"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[dependencies]
flagset = "0.4.5"
widestring = "1.0.2"
nt-time = "0.8.0"
memoffset = "0.9.1"
windows = { version = "0.58.0", features = [
  "Win32_Foundation",
  "Win32_Storage_CloudFilters",
  "Win32_System_CorrelationVector",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Storage_Provider",
  "Win32_System_Memory",
  "Storage",
  "Storage_Search",
  "Foundation",
  "Foundation_Collections",
  "Win32_Security_Authorization",
  "Win32_UI_Shell",
  "Win32_System_Com",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_System_Search",
  "Storage_Streams",
  "Win32_System_Ioctl",
  "Win32_Security",
] }
globset = { version = "0.4.9", optional = true }

[dev-dependencies]
libtest-mimic = "0.7.3"
futures = "0.3.30"
anyhow = "1.0.86"
powershell_script = "1.1.0"

[features]
# Enable globs in the `info::FetchPlaceholders` struct.
globs = ["globset"]

# TODO: temporarily ignored
[workspace]
members = ["examples/sftp"]

[[test]]
harness = false
name = "behavior"
path = "tests/behavior/main.rs"
